--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \title{Abstraction Based Controller Design with Nominal Controller}
 
-\author{Mehrdad, Mahmoud, Kaushik, Sadegh, Rupak}
+\author{Mehrdad, Mahmoud, Kaushik, Rupak, Sadegh}
 
 \makeatletter
 \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
