--- a/preamble.tex
+++ b/preamble.tex
@@ -1,1 +1,24 @@
+% packages
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{xcolor}
+\usepackage{enumitem}
+\usepackage{paralist}
 
+% comment macros
+\newcommand{\KM}[1]{{\color{red} #1}}
+\newcommand{\MS}[1]{{\color{blue} #1}}
+\newcommand{\MZ}[1]{{\color{green} #1}}
+
+% macros
+\newcommand{\Sol}{\mathit{Sol}}
+\newcommand{\Xh}{\widehat{X}}
+\newcommand{\xh}{\widehat{x}}
+\newcommand{\Uh}{\widehat{U}}
+\newcommand{\fh}{\widehat{f}}
+\newcommand{\Beh}{\mathcal{B}}
+\newcommand{\nom}{\mathit{nom}}
+\newcommand{\reach}{\mathit{Reach}}
+\newcommand{\avoid}{\mathit{Avoid}}
+\newcommand{\set}[1]{\lbrace~#1~\rbrace}
+\newcommand{\frr}[1]{\preceq_{#1}}
