--- a/prelims.tex
+++ b/prelims.tex
@@ -1,3 +1,288 @@
 %! TEX ROOT = ./main.tex
 
 \section{Preliminaries}
+
+\smallskip
+\noindent\textbf{Control System.}\
+A \emph{control system} $\Sigma = (X, U, W, f)$
+consists of a state space $X= \mathbb{R}^n$, a \emph{finite} input space $U\subseteq\mathbb{R}^m$, 
+a compact disturbance set $W\subset \mathbb{R}^n$, and 
+a function $f:X\times U\rightarrow X$ s.t. $f(\cdot,u)$ is locally Lipschitz for all $u\in U$. 
+%
+Given an initial state $x_0\in X$, a sampling time $\tau>0$, and a constant input $u\in U$, 
+a \emph{trajectory} of $\Sigma$ 
+on $[0,\tau]$ is an absolutely continuous function $\xi:[0,\tau]\rightarrow X$  s.t. $\xi(0) = x_0$ and
+$\xi(\cdot)$ fulfills the following differential inclusion for almost every $t\in[0,\tau]$:
+\begin{equation}\label{equ:def_f}
+ \dot{\xi}\in f(\xi(t),u) + W. 
+\end{equation} 
+We collect all such solutions in the set $\Sol_\Sigma(x_0,u,\tau)$. 
+
+\smallskip
+\noindent\textbf{Transition System.}\
+A \emph{transition system} $S=(X,U,F)$ consists of a state space $X$, an input space $U$, and a transition function $F:X\times U \rightarrow 2^X$. 
+A system $S$ is \emph{finite} if $X$ and $U$ are finite. 
+A trajectory $\xi\in X^\infty$ is a maximal sequence of states compatible with $F$:
+for all $1\leq k < |\xi|$ there exists $u\in U$ s.t.\ $\xi(k)\in F(\xi(k-1),u)$ and 
+if $|\xi| < \infty$ then $F(\xi(|\xi|),u)= \emptyset$ for all $u\in U$.
+%For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
+
+\smallskip
+\noindent\textbf{Sampled-time Abstraction of Control System.}\
+Let $\Sigma = (X, U, W, f)$ be a control system and $\tau>0$ be the sampling time.
+A \emph{sampled-time abstraction} of $\Sigma$ is a transition system $(X,U,f_\tau)$, s.t.\ $x'$ is in $f_\tau(x,u)$ iff there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
+
+\smallskip
+\noindent\textbf{Controller and Closed Loop.}
+Let $\Sigma_\tau=(X,U,f_\tau)$ be the sampled-time abstraction of the control system $\Sigma=(X,U,W,f)$.
+A state feedback controller, or simply a \emph{controller}, of $\Sigma_\tau$ is a function $C:X\rightarrow U$.
+The controlled \emph{closed loop} is obtained when we connect $C$ with $\Sigma_\tau$ in feedback, and is formalized using the transition system $\Sigma_\tau\parallel C = (X,U,f_\tau^C)$ s.t.\ $x'$ is in $f_\tau^C(x,u)$ iff $x'$ is in $f_\tau(x,u)$ and $C(x)=u$.
+The controller $C$ can be interpreted as a zero-order-hold controller for the control system $\Sigma$.
+
+Suppose $x_0$ be a given initial state of $\Sigma_\tau$.
+The \emph{closed-loop behavior} $\Beh(x_0)$ of $\Sigma_\tau\parallel C$ is the set of all infinite state sequences $(x_0,x_1,\ldots)$ s.t.\ for all $i\geq 0$, there exists an input $u$ with $x_{i+1}\in f_\tau^C(x_i,u)$.
+
+
+%\smallskip
+%\noindent\textbf{Controller and Closed Loop.}
+%Let $\Sigma = (X, U, W, f)$ be a control system and $\tau>0$ be the sampling time.
+%A (state-feedback) \emph{controller} for $\Sigma$ is a function $C:X\rightarrow U$.
+%The \emph{closed loop}, formed by connecting $C$ in feedback with $\Sigma$, is the control system $\Sigma\parallel C = (X,U,W,f^C)$ whose trajectories fulfill the following differential inclusion for almost every $t\in [0,\tau]$:
+%\begin{equation}\label{equ:def_f^C}
+% \dot{\xi}\in f(\xi(t),C(\xi(0))) + W. 
+%\end{equation} 
+
+%\smallskip
+%\noindent\textbf{Systems.} %\label{sec:prelim_abstraction}
+%%
+%A \emph{system} $S=(X,U,F)$ consists of a state space $X$, an input space $U$, and a transition function $F:X\times U \rightarrow 2^X$. 
+%A system $S$ is \emph{finite} if $X$ and $U$ are finite. 
+%A trajectory $\xi\in X^\infty$ is a maximal sequence of states compatible with $F$:
+%for all $1\leq k < |\xi|$ there exists $u\in U$ s.t.\ $\xi(k)\in F(\xi(k-1),u)$ and 
+%if $|\xi| < \infty$ then $F(\xi(|\xi|),u)= \emptyset$ for all $u\in U$.
+%For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
+%%The \emph{behavior} $\Beh{S, D}$ of a system $S=(X,U,F)$ w.r.t.\ $D\subseteq X$ 
+%%consists of all $D$-trajectories; when $D=X$, we simply write $\Beh{S}$.
+%
+%\smallskip
+%\noindent\textbf{Controllers and Closed Loop Systems.}
+%A \emph{controller} $\C=(\Uc,U,\Gc)$ for a system $S=(X,U,F)$
+%consists of a controller \emph{domain} $\Uc\subseteq X$, a space of inputs $U$, and a control map 
+%$\Gc:\Uc\fun 2^{U}\setminus\set{\emptyset}$ 
+%mapping states in its domain to non-empty sets of control inputs.
+%The \emph{closed loop system} formed by interconnecting
+%$S$ and $\C$ in \emph{feedback} is defined by the system 
+% $S^{cl}=(X,U, F^{cl})$ with $F^{cl}:X\times U \rightarrow 2^{X}$ s.t.\ 
+% $x'\in F^{cl}(x,u)$ iff $x\in \Uc$ and $u\in\Gc(x)$ and $x'\in F(x,u)$, or $x\notin \Uc$ and $x'\in F(x,u)$.
+%
+%% 
+%% If $\C$ is \emph{static}, the closed loop system simplifies to
+%% \begin{equation*}%\label{equ:def_Fcl}
+%%  S^{cl}=(X,U,F^{cl})
+%%  ~\text{s.t.}~
+%%  F^{cl}(x,u)=
+%%  \DiCases{F(x,u)}{u=\Gc(x)}{\emptyset}{\text{otherwise}}.
+%% \end{equation*}
+%
+%\smallskip
+%\noindent\textbf{Control Problem.}
+%We consider specifications given as $\omega$-regular languages 
+%whose atomic predicates are interpreted as sets of states. 
+%Given a specification $\psi$, a system $S$, and an interpretation of the predicates as sets
+%of states of $S$, we write $\semantics{\psi}_S\subseteq \Beh{S}$ 
+%for the set of behaviors of $S$ satisfying $\psi$.
+%% 
+%The pair $\tuple{S,\psi}$ is called a \emph{control problem} on $S$ for $\psi$. 
+%% 
+%A controller $\C = (\Uc, U, G)$ for $S$ solves $\tuple{S,\psi}$ if
+%$\Beh{S^{cl}, \Uc}\subseteq\semantics{\psi}_S$.
+%The set of all controllers solving $\tuple{S,\psi}$ is denoted by $\WIN(S, \psi)$.
+%
+%
+%\smallskip
+%\noindent\textbf{Feedback Refinement Relations.}
+%Let $S_i=(X_i,U_i,F_i)$, $i\in\Set{1,2}$ be two systems with
+%$U_2\subseteq U_1$. 
+%A \emph{feedback refinement relation} (FRR) from $S_1$ to $S_2$ 
+%is a relation $Q\subseteq X_1\times X_2$ s.t.\ 
+%for all $x_1\in X_1$ there is some $x_2\in X_2$ such that $Q(x_1,x_2)$ and
+%for all $(x_1,x_2)\in Q$, we have
+%\begin{inparaenum}[(i)]
+% \item $U_{S_2}(x_2)\subseteq U_{S_1}(x_1)$, and 
+% \item $u\in U_{S_2}(x_2) \Rightarrow Q(F_1(x_1,u))\subseteq F_2(x_2,u)$
+%\end{inparaenum}
+%where $U_{S_i}(x):=\SetComp{u\in U_i}{F_i(x,u)\neq \emptyset}$.
+%% \begin{equation}\label{equ:Us}
+%%  U_{S_i}(x)=\SetComp{u\in U_i}{F_i(x,u)\neq \emptyset}.
+%% \end{equation}
+%% 
+%We write $S_1\frr{Q} S_2$ if $Q$ is an FRR from $S_1$ to $S_2$.
+%
+%\smallskip
+%\noindent\textbf{Abstraction-Based Controller Synthesis (ABCS).}
+%Consider two systems $S_1$ and $S_2$, with $S_1\frr{Q} S_2$. 
+%Let $\C=(\Uc,U_2,\Gc)$ be a controller for $S_2$. 
+%Then, as shown in \cite{ReissigWeberRungger_2017_FRR}, $\C$ 
+%can be refined into a controller for $S_1$, defined by 
+%$\C\circ Q=(\widetilde{\Uc},U_1,\widetilde{\Gc})$ 
+%with $\widetilde{\Uc}= Q^{-1}(\Uc)$, and
+%% $\widetilde{\Fc}(z,x)=\SetComp{z'}{\ExQ{\xa\in Q(x)}{z'\in\Fc(z,\xa)}}$, and
+%$\widetilde{\Gc}(x_1)=\SetComp{u\in U_1}{\ExQ{x_2\in Q(x_1)}{u\in\Gc(x_2)}}$ for all $x_1\in\widetilde{\Uc}$. 
+%% 
+%This implies soundness of ABCS. %, as shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. VI.3.
+%
+%\begin{proposition}[\cite{ReissigWeberRungger_2017_FRR}, Def. VI.2, Thm. VI.3]
+%\label{prop:paimpliespt}
+%Let $S_1\frr{Q} S_2$ and $\C\in\WIN(S_2,\psi)$ for a specification $\psi$.
+%If for all $\xi_1\in \Beh{S_1}$ and $\xi_2\in\Beh{S_2}$ with
+%$\dom{\xi_1}=\dom{\xi_2}$ and $(\xi_1(k), \xi_2(k))\in Q$
+%for all $k\in \dom{\xi_1}$ holds that  
+%$\xi_2\in\semantics{\psi}_{S_2}\Rightarrow\xi_1\in\semantics{\psi}_{S_1}$, 
+%then $\C\circ Q \in \WIN(S_1, \psi)$.
+%% \begin{equation}
+%%  \propImp{
+%%  \begin{propConjA}
+%%   \xi_2\in\varphi_2[\psi]\\
+%%   \AllQ{k\in\N}{(\xi_1(k),\xi_2(k))\in Q}
+%%  \end{propConjA}
+%% }{\xi_1\in\varphi_1[\psi]}.
+%% \end{equation}
+%\end{proposition}
+%
+%
+%
+%
+%\smallskip
+%\noindent\textbf{Time-Sampled System.}\
+%Given a time sampling parameter $\tau>0$, we define the \emph{time-sampled system} $\St{}(\Sigma,\tau)=(X,U,\Ft{})$ associated with $\Sigma$, 
+%where $X$, $U$ are as in $\Sigma$, and the transition function $\Ft{}:X\times U\fun 2^X$ is defined as follows.
+%For  all $x\in X$ and $u \in U$, we have $x'\in \Ft{}(x,u)$ iff there exists a solution $\xi\in\ON{Sol}_f(x,\tau,u)$ s.t.\ $\xi(\tau)=x'$.
+%
+%\smallskip
+%\noindent\textbf{Covers.}\ 
+%% For vectors $a,b\in(\real{}\cup\Set{\pm\infty})^n$, a \emph{cell} $\hyint{a,b}$ is closed set $\set{x\in\real{n}\mid \forall i\in\set{1,\ldots,n}.a_i\leq x_i \leg b_i}$.
+%% To define a \emph{finite} transition system as an abstraction of $\St{}$ 
+%A \emph{cover} $\widehat{X}$ of the state space $X$ is a set of
+%non-empty, closed hyper-intervals $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$ called \emph{cells},
+%such that every $x\in X$ belongs to some cell in $\widehat{X}$. 
+%% This definition allows for unbounded cells in $\widehat{X}$. 
+%% 
+%% 
+%Given a grid parameter $\eta \in\real{}_{>0}^n$, we say that a point $c\in Y$ is \emph{$\eta$-grid-aligned} if there is $k\in\Z^n$ s.t.\ for each $i\in \set{1,\ldots,n}$,
+%$c_i = \alpha_i + k_i\eta_i - \frac{\eta_i}{2}$.
+%Further, a cell $\hyint{a,b}$ is \emph{$\eta$-grid-aligned} if there is a $\eta$-grid-aligned point $c$ s.t.\ $a = c - \frac{\eta}{2}$ and
+%$b = c + \frac{\eta}{2}$;
+%such cells define sets of diameter $\eta$ whose center-points are $\eta$-grid-aligned. 
+%% Given a compact set $Y=\hyint{\alpha, \beta}\subseteq X$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$
+%
+%% To construct a \emph{finite} abstractions of $\St{}$ using such \emph{$\eta$-grid-aligned} cells as abstract states, we consider a compact \emph{region of interest} $Y \subseteq X$ where we assume that $Y = \hyint{\alpha, \beta}$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$. Then we define the \emph{cover} $\widehat{X}$ of $Y$ as the \emph{finite} set of non-overlapping \emph{$\eta$-grid-aligned} cells 
+%% % $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$, 
+%% s.t.\ every $x\in Y$ belongs to exactly one cell $\xa\in\widehat{X}$. 
+%% Clearly, if $Y = \hyint{\alpha, \beta}$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$ we have that the set of $\eta$-grid-aligned cells is a \emph{finite cover} for $Y$.
+%
+%% In the following, we assume the region of interest $Y$ is fixed once and for all.
+%% \RM{OMIT?}\footnote{
+%% 	$Y$ induces a \emph{finite} \RM{undef:} abstaction by restricting attention to a subset of the state space for control. 
+%% 	$Y$ can also be interpreted as a global safety requirement (see Sec.~\ref{sec:problem}).}
+%
+%\smallskip
+%\noindent\textbf{Abstract Systems.}\ 
+%An \emph{abstract system} $\Sa{}(\Sigma,\tau,\eta)=(\Xa{},\Ua{},\Fa{})$ for a control system $\Sigma$,
+%a time sampling parameter $\tau > 0$, and a grid parameter $\eta \in \mathbb{R}^n_{>0}$
+%consists of an abstract state space $\Xa{}$, a finite abstract input space $\Ua\subseteq U$, and an abstract transition function 
+%$\Fa{}:\Xa{}\times \Ua{}\rightarrow 2^{\Xa{}}$. To ensure that $\Sa{}$ is finite, we consider a compact \emph{region of interest} $Y=\hyint{\alpha, \beta}\subseteq X$ with $\alpha,\beta\in\real{n}$ s.t.\ $\beta - \alpha$ is an integer multiple of $\eta$. 
+%Then we define $\Xa{}=\widehat{Y}\cup\widehat{X}'$ s.t.\ $\widehat{Y}$ is the \emph{finite} set of \emph{$\eta$-grid-aligned} cells covering $Y$ and $\widehat{X}'$ is a finite set of large unbounded cells covering the (unbounded) region $X\setminus Y$. 
+%% 
+%We define $\Fa{}$ based on the dynamics of $\Sigma$ only within $Y$. That is, for all $\xa\in\Ya{}$, $\xa'\in\Xa{}$, and $u\in\Ua{}$ 
+%we require
+% \begin{align}\label{eq:next state abs sys 0}
+%   \xa'\in \Fa{}(\xa,u) \ \mbox{ if } \ 	\exists\xi\in \cup_{x\in\xa}\ON{Sol}_f(x,\tau,u) \;.\; \xi(\tau) \in \xa'.
+% \end{align}
+%For all states in  $\xa\in(\Xa{}\setminus\Ya{})$ we have that $\Fa{}(\xa,u)=\emptyset$ for all $u\in\Ua$.
+%% $\hyint{a,b}$ with $a,b\in (\real{}\cup\Set{\pm\infty})^n$, 
+%% An \emph{abstract system} $\Sa{}(\Sigma,\tau,\eta)=(\Xa{},\Ua{},\Fa{})$ for a control system $\Sigma$,
+%% a time sampling parameter $\tau > 0$, and a grid parameter $\eta \in \mathbb{R}^n_{>0}$
+%% consists of:
+%% % 
+%% \begin{inparaenum}[(i)]
+%%  \item an abstract state space $\Xa{}$ which forms a finite cover of $X$;
+%%  moreover, we assume there is a non-empty subset 
+%%  $\Ya{}\subseteq\Xa{}$ which forms a finite cover of $Y$ with $\eta$-grid aligned cells,
+%%  \item a finite abstract input space $\Ua\subseteq U$, and
+%%  \item an abstract transition function 
+%% $\Fa{}:\Xa{}\times \Ua{}\rightarrow 2^{\Xa{}}$ such that 
+%% for all $\xa\in(\Xa{}\setminus\Ya{})$ and $u\in\Ua$ we have $\Fa{}(\xa,u)=\emptyset$ 
+%% and for all $\xa\in\Ya{}$, $\xa'\in\Xa{}$, and $u\in\Ua{}$ 
+%% it holds that
+%%  \begin{align}\label{eq:next state abs sys 0}
+%%    \xa'\in \Fa{}(\xa,u) \ \mbox{ if } \ 	\exists\xi\in \cup_{x\in\xa}\ON{Sol}_f(x,\tau,u) \;.\; \xi(\tau) \in \xa'.
+%%  \end{align}
+%% \end{inparaenum}
+%We extend $\Fa{}$ to sets of abstract states $\Upsilon\subseteq \Xa{}$ by defining $\Fa{}(\Upsilon,u) := \bigcup_{\xa\in \Upsilon} \Fa{}(\xa,u)$.
+%
+%While $\Xa{}$ is not a partition of the state space $X$, notice that cells only overlap at the boundary and one can define 
+%a deterministic function that resolves the resulting non-determinism by consistently mapping such boundary states to a unique cell covering it. 
+%The composition of $\Xa{}$ with this function defines a partition.
+%To avoid notational clutter, we shall simply treat $\widehat{X}$ as a partition.
+%
+%% \smallskip
+%% \noindent\textbf{Induced FRR.}\
+%% %\label{sec:prelim:FRR}
+%% %
+%% It was shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. III.5 that the relation
+%% $\Qa{}\subseteq X\times \Xa{}$ defined by $(x,\xa)\in\Qa{}$ iff $x\in\xa$
+%% is an FRR between $\St{}$ and $\Sa{}$, i.e.,
+%% $\St{}\frr{\Qa{}}\Sa{}$.
+%% %
+%% Hence, we can apply ABCS as described in \REFsec{sec:Prelim_FRR} by computing a 
+%% controller for $\Sa{}$ which can then be refined to a controller for $\St{}$ under the pre-conditions of Prop.~\ref{prop:paimpliespt}.% holds. 
+%
+%\smallskip
+%\noindent\textbf{Control Problem.}\
+%It was shown in \cite{ReissigWeberRungger_2017_FRR}, Thm. III.5 that the relation
+%$\Qa{}\subseteq X\times \Xa{}$, defined by all tuples $(x,\xa)\in\Qa{}$ for which $x\in\xa$,
+%is an FRR between $\St{}$ and $\Sa{}$, i.e.,
+%$\St{}\frr{\Qa{}}\Sa{}$.
+%%
+%Hence, we can apply ABCS as described in \REFsec{sec:Prelim_FRR} 
+%by computing a controller $C$ for $\Sa{}$ which can then be refined to a controller for $\St{}$ under the pre-conditions of Prop.~\ref{prop:paimpliespt}.% holds. 
+%
+%More concretely, we consider safety and reachability control problems for the 
+%continuous-time system $\Sigma$, which are defined by a set of \emph{static obstacles} $\obstacle \subset X$ which 
+%should be avoided and a set of \emph{goal states} $\goal\subseteq X$ which should be reached, respectively.
+%Additionally, when constructing $\Sa{}$, we used a compact region of interest $Y\subseteq X$ to ensure \emph{finiteness} of $\Sa{}$ allowing to apply tools from reactive synthesis \cite{MPS95} to compute $C$. 
+%This implies that $C$ is only valid within $Y$. 
+%We therefore interpret $Y$ as a \emph{global safety requirement} and synthesize a controller which keeps the system within 
+%$Y$ while implementing the specification. 
+%This interpretation leads to a safety and reach-avoid
+%control problem, w.r.t.\ a safe set $\Rset=Y\setminus \obstacle$ and target set $\Tset=\goal \cap\Rset$.
+%% formally defined in linear temporal logic (LTL) \cite{baier2008principles} by
+%% \begin{subequations}\label{equ:LTLspec}
+%% \begin{align}
+%% 	\Specs &= \text{always}\; (\Rset{}),\quad\text{and}\label{equ:LTLspec:safe}\\
+%% 	\Specr &= \left[\left(\text{always}\; (\Rset )\right)\; \text{until} \; \Tset{}\right].\label{equ:LTLspec:reach} %\wedge \left[\text{eventually}\; T\right]
+%% \end{align}
+%% \end{subequations}
+%As $\Rset{}$ and $\Tset{}$ can be interpreted as predicates over the state space $X$ of $\St{}$, this directly defines the control problems $\tuple{\St{},\Specs}$ and $\tuple{\St{},\Specr}$ via
+%% . As $C\in\WIN(\St{},\Spec)$ iff $\Beh{\St{}^{cl}}\subseteq\semantics{\Spec}_{\St{}}$ the latter holds for $\Spec$ in \eqref{equ:LTLspec} iff
+%\begin{subequations}\label{equ:Csound}
+% \begin{align}
+% \semantics{\Specs}_{\St{}}&:=\SetCompX{\xi\in\Beh{\St{}}}{\AllQ{k\in\dom{\xi}}{\xi(k)\in\Rset{}}},~\text{and}\label{equ:Csound:safe}\\
+% \semantics{\Specr}_{\St{}}&:=\SetCompX{\xi\in\Beh{\St{}}}{\ExQ*{k\in\dom{\xi}}{
+% \begin{propConjA}
+%  \xi(k)\in\Tset{}\\
+%  \AllQ{k' \leq k}{\xi(k')\in \Rset{}}
+% \end{propConjA}
+% }}\label{equ:Csound:reach}
+%\end{align}
+%\end{subequations}
+%for safety and reach-avoid control, respectively.
+%Intuitively, a controller $C\in\WIN(\St{},\Spec)$ applied to $\Sigma$ is a sample-and-hold controller, which ensures that the specification holds on all closed-loop trajectories \emph{at sampling instances}.%
+%\footnote{This implicitly assumes that sampling times and grid sizes are such that no \enquote{holes} occur between consecutive cells visited by a trajectory. This can be formalized by assumptions on the growth rate of $f$ in \eqref{equ:def_f} which is beyond the scope of this paper.}
+%
+%To compute $C\in\WIN(\St{},\Spec)$ via ABCS as described in \REFsec{sec:Prelim_FRR} we need to ensure that the pre-conditions of Prop.~\ref{prop:paimpliespt} hold. This is achieved by \emph{under-approximating} the safe and target sets by abstract state sets 
+%\begin{align}\label{equ:RsetaTseta}
+% \Rseta{}=\SetComp{\xa\in\Xa{}}{\xa\subseteq \Rset{}},~\text{and}~
+% \Tseta{}=\SetComp{\xa\in\Xa{}}{\xa\subseteq \Tset{}},
+%\end{align}
+%and defining $\semantics{\Specs}_{\Sa{}}$ and $\semantics{\Specr}_{\Sa{}}$ via \eqref{equ:Csound} by substituting $\St{}$ with $\Sa{}$, $R$ with $\Rseta{}$ and $T$ with $\Tseta{}$. With this, it immediately follows from Prop.~\ref{prop:paimpliespt} that $C\in\WIN\tuple{\Sa{},\Spec}$ can be refined to the controller $C\circ Q\in\WIN{\tuple{\St{},\Spec}}$.
