--- a/problem.tex
+++ b/problem.tex
@@ -4,29 +4,53 @@
 
 We consider reach-avoid control problems in this paper.
 A reach-avoid control problem for a given control system $\Sigma=(X,U,W,f)$ is a tuple $(\reach,\avoid,x_0)$, where $\reach$ and $\avoid$ are subsets of the state space $X$, and $x_0$ is a designated initial state.
-For a given sampling time $\tau>0$, a controller $C$ \emph{realizes the reach-avoid specification on} $\Sigma$ if the closed loop behavior $\Beh(x_0)$ of $\Sigma_\tau\parallel C$ satisfies the following condition: For \emph{every} infinite sequence $(x_0,x_1,\ldots)$ in $\Beh(x_0)$, there \emph{exists} a $T$ s.t.\ $x_T\in \reach$ and for \emph{every} $t\leq T$, $x_t\notin \avoid$. 
+For a given sampling time $\tau>0$, a feedback controller $C$ \emph{realizes the reach-avoid specification on} $\Sigma_\tau$ if the closed-loop behavior $\Beh^\cl(x_0)$ of $C\parallel\Sigma_\tau$ satisfies the following condition: For \emph{every} infinite sequence $(x_0,x_1,\ldots)$ in $\Beh^\cl(x_0)$, there \emph{exists} a $K$ s.t.\ $x_K\in \reach$ and for \emph{every} $k\leq K$, $x_k\notin \avoid$. 
 In linear temporal logic (LTL) notation \cite{Baier book}, this specification can be succinctly written as:
 \begin{equation}
 	x_0 \wedge (\lnot \avoid\; \mathcal{U}\;\reach).
 \end{equation}
 
 \begin{problem}\label{prob:reach-avoid}
-	Given a control system $\Sigma$, a reach-avoid control problem, and a sampling time, find a controller that realizes the reach-avoid specification on $\Sigma$.
+	Given a control system $\Sigma$, a reach-avoid control problem, and a sampling time, find a controller that realizes the reach-avoid specification on $\Sigma_\tau$.
 \end{problem}
 
-Prob.~\ref{prob:reach-avoid} is a well-studied problem in the literature; we divide the available techniques into two broad categories called $\mathit{fast}$ and $\mathit{sound}$.
-The category $\mathit{fast}$ consists of techniques which are extremely efficient, but do not provide formal worst-case robustness guarantee against external disturbances \cite{Altro, AI and path planning methods}.
-The category $\mathit{sound}$ consists of techniques which are not so efficient, but provides strong formal guarantee on the correctness of the controller \cite{ABCD, Hamilton-Jacobi, LQR tree}.
+Prob.~\ref{prob:reach-avoid} is a well-studied problem in the literature; we divide the available techniques into two broad categories, namely the $\mathit{fast}$ ones and the $\mathit{sound}$ ones.
+The $\mathit{fast}$ ones are those which are extremely efficient, but do not provide formal worst-case robustness guarantee of the controller against external disturbances \cite{Altro, AI and path planning methods}.
+The $\mathit{sound}$ ones are those which are not so efficient, but provides strong formal guarantee on the correctness of the controller \cite{ABCD, Hamilton-Jacobi, LQR tree}.
 We propose a solution approach for Prob.~\ref{prob:reach-avoid} that marries the $\mathit{fast}$ and the $\mathit{sound}$ solution techniques.
 Our approach is a two-stage procedure: 
-First, we ignore the disturbance from the system and consider the nominal system model $\Sigma^\nom=(X,U,\set{0},f)$.
-We use a $\mathit{fast}$ technique to quickly find a nominal controller $C^\nom$ for $\Sigma^\nom$.
-We expect that $C^\nom$ will work correctly for $\Sigma$ when there is no external disturbance, and might fail when there is a non-zero external disturbance.
-This leads us to the second stage where we use a $\mathit{sound}$ method to build the desired sound controller by only ``robustifying'' $C^\nom$ against external disturbances.
-Performing this second stage is the main contribution of this paper, and is formally stated in the following:
+First, we deploy an off-the-shelf $\mathit{fast}$ method to quickly obtain a (open-loop or feedback) controller $C^\nom$ and the witness \emph{nominal trajectory} $(x_0^\nom,\ldots,x_K^\nom)$ of the controlled system (open-loop or closed-loop) that fulfills the reach-avoid specification.
+We use the procedure ALTRO \cite{altro} which requires us to initially ignore the external disturbance (i.e.\ set $W=\set{0}$), and only gives us an open-loop controller.
+Thus, $C^\nom$ is presumably a non-robust controller which might not work well in practice on the actual system $\Sigma_\tau$ in the presence of disturbances.
+In the second stage we use a $\mathit{sound}$ method to compute a sound feedback controller which tracks the nominal trajectory up to a given precision.
+The main contribution of this paper is an efficient implementation of this second stage, which is formalized as a separate problem in the following:
 
 \begin{problem}
-	Let $\Sigma=(X,U,W,f)$ be a given control system, $\tau>0$ be a given sampling time, $C^\nom:X\rightarrow U$ be a given nominal controller originally designed for the nominal system $\Sigma^\nom=(X,U,\set{0},f)$, and $\varepsilon>0$ be a precision parameter.
-	Find a controller $C$ for $\Sigma$ s.t.\ for every sequence $(x_0,x_1,\ldots)$ that is in the closed-loop behavior $\mathcal{B}(x_0)$ of $\Sigma_\tau\parallel C$ and for every $i > 0$, there exists a 
-	\KM{To finish.}
+	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $(x_0^\nom,\ldots,x_K^\nom)$ be a given trajectory, and $\varepsilon>0$ be a given precision parameter.
+	Suppose $x_0\in X$ be any initial state s.t.\ $\| x_0-x_0^\nom \|\leq \varepsilon$.
+	Find a feedback controller $C$ for $\Sigma_\tau$ s.t.\ for every sequence $(x_0,x_1,\ldots)$ in the closed-loop behavior $\Beh^\cl(x_0)$ of $C \parallel \Sigma_\tau$, the following are satisfied:
+	\begin{enumerate}
+		\item for every $k > 0$, there exists a $j>0$, s.t.\ $\| x_k-x_j^\nom \| \leq \varepsilon$, and
+		\item there exists a $k>0$, s.t.\ $\| x_k-x_K^\nom \|\leq \varepsilon$.
+	\end{enumerate} 
 \end{problem}
+
+
+%First, we simply ignore the external disturbance (i.e.\ set $W=\set{0}$).
+%This enables us to use one of the $\mathit{fast}$ methods to quickly compute an initial controller candidate $C^\nom$.
+%Note that $C^\nom$ might not be able to realize the specification on the actual system $\Sigma_\tau$ due to the external disturbance $W$.
+% for the given specification by assuming that the disturbance set $W=\set{0}$.
+%
+%
+%First, we ignore the disturbance from the system and consider the nominal system model $\Sigma^\nom=(X,U,\set{0},f)$.
+%We use a $\mathit{fast}$ technique to quickly find a nominal controller $C^\nom$ for $\Sigma^\nom_\tau$.
+%The resulting closed-loop 
+%We expect that $C^\nom$ will work correctly for $\Sigma_\tau$ when there is no external disturbance, and might fail when there is a non-zero external disturbance.
+%This leads us to the second stage where we use a $\mathit{sound}$ method to build the desired sound controller by locally ``robustifying'' $C^\nom$ against external disturbances.
+%Performing this second stage is the main contribution of this paper, and is formally stated in the following:
+%
+%\begin{problem}
+%	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\Phi:=(\reach,\avoid,x_0)$ be a reach-avoid control specification, $C^\nom:X\rightarrow U$ be a given nominal controller that realizes $\Phi$ on the sampled-time abstraction $\Sigma^\nom_\tau$ of the nominal system $\Sigma^\nom=(X,U,\set{0},f)$, and $\varepsilon>0$ be a precision parameter.
+%	Suppose $(x_0,x_1^n,x_2^n,\ldots)$ be the unique trajectory generated by the nominal closed loop $\Sigma^\nom_\tau\parallel C^\nom$.
+%	Find a controller $C$ for $\Sigma$ s.t.\ for every sequence $(x_0,x_1,\ldots)$ that is in the closed-loop behavior $\mathcal{B}(x_0)$ of $\Sigma_\tau\parallel C$ and for every $i > 0$, there exists a $j>0$, s.t.\ $\| x_i-x_j^n \| \leq \varepsilon$.
+%\end{problem}
