added the algorithm

--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,8 @@
 %\usepackage{enumitem}
 \usepackage{paralist}
 %\usepackage{amsthm}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 % comment macros
 \newcommand{\KM}[1]{{\color{red} \textbf{KM:} #1}}
@@ -22,11 +24,13 @@
 \newcommand{\nom}{\mathit{nom}}
 \newcommand{\reach}{\mathit{Reach}}
 \newcommand{\avoid}{\mathit{Avoid}}
+\newcommand{\bound}{\mathit{Domain}}
 \newcommand{\set}[1]{\{ #1 \}}
 \newcommand{\frr}[1]{\preceq_{#1}}
 \newcommand{\ol}{\mathrm{OL}}
 \newcommand{\cl}{\mathrm{CL}}
 \newcommand{\findAbs}{\mathit{ComputeAbstraction}}
+\newcommand{\ball}{\Omega}
 
 % environments
 \newtheorem{subproblem}{Subproblem}
