minor updates in Sec.5

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,6 @@
 % packages
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{enumerate}
@@ -31,6 +32,7 @@
 \newcommand{\cl}{\mathrm{CL}}
 \newcommand{\findAbs}{\mathit{ComputeAbstraction}}
 \newcommand{\ball}{\Omega}
+\def\reals{\mathbb{R}}
 
 % environments
 \newtheorem{subproblem}{Subproblem}
