updating experiments Sec

--- a/preamble.tex
+++ b/preamble.tex
@@ -9,6 +9,7 @@
 %\usepackage{amsthm}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{graphicx}
 
 % comment macros
 \newcommand{\KM}[1]{{\color{red} \textbf{KM:} #1}}
