added discretization parameters in the algo

--- a/prelims.tex
+++ b/prelims.tex
@@ -3,9 +3,14 @@
 \section{Preliminaries}
 
 \smallskip
+\noindent\textbf{Notation.}\
+We use the notation $\mathbb{R}$ and $\mathbb{R}_{>0}$ to denote the set of real numbers and the set of positive real numbers respectively.
+The norm $\| \cdot \|$ denotes the infinity norm.
+
+\smallskip
 \noindent\textbf{Control System.}\
 A \emph{control system} $\Sigma = (X, U, W, f)$
-consists of a state space $X= \mathbb{R}^n$, a \emph{finite} input space $U\subseteq\mathbb{R}^m$, 
+consists of a state space $X= \mathbb{R}^n$, an input space $U\subseteq\mathbb{R}^m$, 
 a compact disturbance set $W\subset \mathbb{R}^n$, and 
 a function $f:X\times U\rightarrow X$ s.t. $f(\cdot,u)$ is locally Lipschitz for all $u\in U$. 
 %
