--- a/problem.tex
+++ b/problem.tex
@@ -16,19 +16,20 @@ In linear temporal logic (LTL) notation \cite{Baier book}, this specification ca
 
 Prob.~\ref{prob:reach-avoid} is a well-studied problem in the literature; we divide the available techniques into two broad categories, namely the $\mathit{fast}$ ones and the $\mathit{sound}$ ones.
 The $\mathit{fast}$ ones are those which are extremely efficient, but do not provide formal worst-case robustness guarantee of the controller against external disturbances \cite{Altro, AI and path planning methods}.
-The $\mathit{sound}$ ones are those which are not so efficient, but provides strong formal guarantee on the correctness of the controller \cite{ABCD, Hamilton-Jacobi, LQR tree}.
+The $\mathit{sound}$ ones are those which are not so efficient, but provide strong formal guarantee on the correctness of the controller \cite{ABCD, Hamilton-Jacobi, LQR tree}.
+
 We propose a solution approach for Prob.~\ref{prob:reach-avoid} that marries the $\mathit{fast}$ and the $\mathit{sound}$ solution techniques.
 Our approach is a two-stage procedure: 
 First, we deploy an off-the-shelf $\mathit{fast}$ method to quickly obtain a (open-loop or feedback) controller $C^\nom$ and the witness \emph{nominal trajectory} $(x_0^\nom,\ldots,x_K^\nom)$ of the controlled system (open-loop or closed-loop) that fulfills the reach-avoid specification.
-We use the procedure ALTRO \cite{altro} which requires us to initially ignore the external disturbance (i.e.\ set $W=\set{0}$), and only gives us an open-loop controller.
+While, in principle, any $\mathit{fast}$ could be used for this first phase, in this work we use ALTRO \cite{altro}.
+ALTRO requires us to ignore the external disturbance (i.e.\ set $W=\set{0}$) at first, and only gives us an open-loop controller $C^\nom$.
 Thus, $C^\nom$ is presumably a non-robust controller which might not work well in practice on the actual system $\Sigma_\tau$ in the presence of disturbances.
 In the second stage we use a $\mathit{sound}$ method to compute a sound feedback controller which tracks the nominal trajectory up to a given precision.
 The main contribution of this paper is an efficient implementation of this second stage, which is formalized as a separate problem in the following:
 
 \begin{problem}\label{prob:tracking}
-	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $(x_0^\nom,\ldots,x_K^\nom)$ be a given trajectory, and $\varepsilon>0$ be a given precision parameter.
-	Suppose $x_0\in X$ be any initial state s.t.\ $\| x_0-x_0^\nom \|\leq \varepsilon$.
-	Find a feedback controller $C$ for $\Sigma_\tau$ s.t.\ for every sequence $(x_0,x_1,\ldots)$ in the closed-loop behavior $\Beh^\cl(x_0)$ of $C \parallel \Sigma_\tau$, the following are satisfied:
+	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $(x_0^\nom,\ldots,x_K^\nom)$ be a given finite nominal trajectory, and $\varepsilon>0$ be a given precision parameter.
+	Find a feedback controller $C$ for $\Sigma_\tau$ s.t.\ for every initial state $x_0\in X$ with $\| x_0-x_0^\nom \|\leq \varepsilon$, and for every infinite trajectory $(x_0,x_1,\ldots)$ in the closed-loop behavior $\Beh^\cl(x_0)$ of $C \parallel \Sigma_\tau$, the following are satisfied:
 	\begin{enumerate}
 		\item for every $k > 0$, there exists a $j>0$, s.t.\ $\| x_k-x_j^\nom \| \leq \varepsilon$, and
 		\item there exists a $k>0$, s.t.\ $\| x_k-x_K^\nom \|\leq \varepsilon$.
