--- a/experiments.tex
+++ b/experiments.tex
@@ -66,7 +66,7 @@ Next, we use SCOTS to implement ALg.~\ref{alg:abcd-for-tracking} in order to syn
 	\label{tab:inv_pend}
 \end{table}
 \subsection{Ship Docking}\label{subsec:6dship}
-Next, we consider controller synthesis for a ship docking scenario wherein a ship starts moving toward the dock from a certain distance and the control goal is hence to bring the ship from its start point into the dock such that the ship's speed near the dock is very small. To represent the ship's model in state space, we partition the state vector as $x=\begin{bmatrix}\lambda& \nu\end{bmatrix}^\top$, where $\lambda=\begin{bmatrix}N&E&\psi\end{bmatrix}^\top$ are the South-North and West-East positions and heading of the ship, $\nu = \begin{bmatrix}f &g &h\end{bmatrix}^\top$ are the surge and sway velocities, and yaw rate of the ship. Moreover, we consider disturbance due to current velocities ($W_c\subset\reals^3$) and disturbance corresponding to wind forces ($W_{wind}\subset\reals^3$ ). One can write the ship dynamics as $\dot x(t)\in f^s(x(t),u(t))+W$, where $u\in\reals^3$ and $W=W_c\times W_{wind}$ denote the control input vector and disturbance set and
+Next, we consider controller synthesis for a ship docking scenario wherein a ship starts moving toward the dock from a certain distance and the control goal is hence to bring the ship from its start point into the dock such that the ship's speed near the dock is very small. To represent the ship's model in state space, we partition the state vector as $x=\begin{bmatrix}\lambda& \nu\end{bmatrix}^\top$, where $\lambda=\begin{bmatrix}N&E&\psi\end{bmatrix}^\top$ are the South-North and West-East positions and heading of the ship, $\nu = \begin{bmatrix}g &h&k\end{bmatrix}^\top$ are the surge and sway velocities, and yaw rate of the ship. Moreover, we consider disturbance due to current velocities ($W_c\subset\reals^3$) and disturbance corresponding to wind forces ($W_{wind}\subset\reals^3$ ). One can write the ship dynamics as $\dot x(t)\in f^s(x(t),u(t))+W$, where $u\in\reals^3$ and $W=W_c\times W_{wind}$ denote the control input vector and disturbance set and
 \begin{equation}\label{eq:ship_ss}
 f^{s}(x(t),u(t))=\begin{bmatrix}R(\psi)\nu\\M^{-1}(u(t)-C(\nu)\nu-D\nu)\end{bmatrix}.
 \end{equation}
