--- a/prelims.tex
+++ b/prelims.tex
@@ -25,11 +25,11 @@ We collect all such solutions in the set $\Sol_\Sigma(x_0,u,\tau)$.
 
 \smallskip
 \noindent\textbf{Transition System.}\
-A \emph{transition system} $S=(X,U,F)$ consists of a state space $X$, an input space $U$, and a transition function $F:X\times U \rightarrow 2^X$. 
-A system $S$ is \emph{finite} if $X$ and $U$ are finite. 
-A trajectory $\xi\in X^\infty$ is a maximal sequence of states compatible with $F$:
-for all $1\leq k < |\xi|$ there exists $u\in U$ s.t.\ $\xi(k)\in F(\xi(k-1),u)$ and 
-if $|\xi| < \infty$ then $F(\xi(|\xi|),u)= \emptyset$ for all $u\in U$.
+A \emph{transition system} $S=(Q,\Sigma,\delta)$ consists of a state space $Q$, an input space $\Sigma$, and a transition function $\delta:Q\times \Sigma \rightarrow 2^Q$. 
+A system $S$ is \emph{finite} if $Q$ and $\Sigma$ are finite. 
+A trajectory $\rho\in Q^\infty$ is a maximal sequence of states compatible with $\delta$:
+for all $1\leq k < |\rho|$ there exists $\sigma\in \Sigma$ s.t.\ $\rho(k)\in \delta(\rho(k-1),\sigma)$ and 
+if $|\rho| < \infty$ then $\delta(\rho(|\rho|),\delta)= \emptyset$ for all $\sigma\in \Sigma$.
 %For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
 
 \smallskip
